samples/_failures_safe/1761253645_0860f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b55f8543.c: In function ‘main’:
./samples/SAFE/__tmp_b55f8543.c:142: error: expected ‘{’ at end of input
